<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="18dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/gradinet_bg"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/title_text"
        android:textSize="30sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/relativelayout">

        <androidx.cardview.widget.CardView
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_gravity="center"
                android:textSize="19sp"
                android:id="@+id/gratefultext"
                android:text="@string/grateful_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <Button
        android:id="@+id/startbutton"
        android:textColor="#E91E63"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started_text"/>

</LinearLayout>