<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="8dp"
    android:padding="15dp"
    android:fitsSystemWindows="true"
    >
    <LinearLayout
        android:elevation="10dp"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/journal_row_userName"
            android:text="@string/utsav"
            android:padding="3dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <ImageButton
            android:id="@+id/journal_row_share_image"
            android:src="@android:drawable/ic_menu_share"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/journal_image_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:scaleType="fitXY"
            android:src="@drawable/journal_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/title_text"
            android:text="@string/title"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:id="@+id/thoughts_text"
            android:text="@string/thoughts"
            android:textSize="18sp"
            android:textStyle="normal"
            android:paddingTop="15dp"
            android:paddingRight="15sp"
            android:paddingEnd="15sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:id="@+id/journal_time_list"
            android:text="@string/data_crated"
            android:textStyle="italic"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>